# opiter

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md  LICENSE  PROJECT.md  PROJECT_BRIEF.md  PROJECT_BRIEF_PHASE4.md  PROJECT_BRIEF_PHASE5.md  PROJECT_BRIEF_POLISH.md  README.ko.md  README.md  opiter.spec  pyproject.toml
.github/workflows/: release.yml
docs/: external_viewer_compatibility.md  final_completion.md  phase1_self_verification.md  phase2_self_verification.md  phase3_self_verification.md  phase4_self_verification.md  phase5_self_verification.md  polish_self_verification.md
launcher/: launch.py  opiter-launcher.spec
launcher/opiter_launcher/: __init__.py  __main__.py  downloader.py  github.py  main.py  paths.py  wizard.py
samples/: generate_samples.py  sample.docx
src/opiter/: __init__.py  __main__.py  main.py
src/opiter/core/: __init__.py  annotations.py  compression.py  document.py  image_export.py  image_to_pdf.py  lo_installer.py  metadata.py  office_to_pdf.py  page_ops.py  pdf_to_docx.py  pdf_to_hwp.py  preferences.py  renderer.py  search.py  thumbnail_cache.py  toc.py  undo.py  watermark.py
src/opiter/ui/: __init__.py  bookmarks_panel.py  cjk_font.py  export_dialog.py  lo_install_dialog.py  main_window.py  metadata_dialog.py  page_canvas.py  preferences_dialog.py  search_bar.py  smooth_tab_bar.py  theme.py  thumbnail_panel.py  viewer_widget.py  watermark_dialog.py
src/opiter/ui/editors/: __init__.py  abstract_editor.py  docx_editor.py  hwp_editor.py
src/opiter/utils/: __init__.py  errors.py  paths.py
tests/: conftest.py  test_annotations.py  test_document.py  test_main_window.py  test_page_ops.py  test_phase4_core.py  test_phase5_core.py  test_preferences.py  test_renderer.py  test_search.py  test_search_bar.py  test_theme.py  test_thumbnail_panel.py  test_undo.py  test_viewer.py
