[project]
name = "opiter"
version = "0.1.9"
description = "Free, open-source desktop document workbench — edit PDFs, view DOCX and HWP, convert between formats, all locally."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "juhyeonl", email = "xx.juon@gmail.com" }
]
keywords = ["pdf", "docx", "hwp", "editor", "viewer", "annotation", "open-source", "qt", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Natural Language :: English",
    "Natural Language :: Korean",
]
requires-python = ">=3.11"
dependencies = [
    "mammoth>=1.12.0",
    "pdf2docx>=0.5.12",
    "pdfplumber>=0.11.9",
    "pyhwp>=0.1b15",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.2",
    "pyside6>=6.11.0",
    "python-docx>=1.2.0",
    "six>=1.17.0",
]

[project.scripts]
opiter = "opiter.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
]
